# Bandrift

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: main.js  style.css
src-tauri/: Cargo.toml  download.py  make_icons.py  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
